--- a/02-scales_random_variable.Rmd
+++ b/02-scales_random_variable.Rmd
@@ -70,6 +70,8 @@ kable(burnout[1:10,])
 
 Важное понятие здесь -- **область допустимых значений**. У непрерывной переменной это всегда интервал, например {0;+∞}, у дисретных -- строго определенные значения, которые, тем не менее, могут тоже стремиться к бесконечности, например, {0;1;2;3;4;5;6;7;8...}
 
+<!--chapter:end-->
+
 # Вероятность и случайные величины 
 
 ## Случайная величина
