--- a/03-distributions.Rmd
+++ b/03-distributions.Rmd
@@ -2,7 +2,12 @@
 
 > Представим, что нас интересует вопрос: изменилось ли благосостояние россиян с 2008 по 2022 год? Если да, то как? Как можно ответить на этот вопрос?
 
+Если мы не хотим проводить анализ __, а хотим получить одно число
 
+
+Среднее -- сумма всех значений, подеденная на количество наблюдений.
+
+Медиана -- это точка (или линия, в зависимости от того, как вы визуализируете), которая делает распределение плотности вероятности или гистограмму частот поплам. Обратите внимание, что это  середина не между значениями, а между их частотами. Для того, чтобы посчитать медиану, нужно упорядочить все значения, посчитать, сколько всего раз встретились все значения, разделить его на два и посмотреть, ___
 
 https://ru.wikipedia.org/wiki/%D0%9A%D0%BE%D1%8D%D1%84%D1%84%D0%B8%D1%86%D0%B8%D0%B5%D0%BD%D1%82_%D0%94%D0%B6%D0%B8%D0%BD%D0%B8
 
