--- a/02-scales_random_variable.Rmd
+++ b/02-scales_random_variable.Rmd
@@ -139,6 +139,8 @@ rolls <- dice(20,1)
 t(rolls)
 ```
 
+## Гистограмма
+
 Построим таблицу частот выпадения каждой грани
 
 ```{r}
@@ -185,6 +187,9 @@ $P(L_{.4857856}) = \frac{1}{множество всех точек на отре
 В пределе это число равно 0.
 
 Получается, что мы не можем посчитать математически (статистически), и приходится прибегать к геометрическому определению.
+
+## График плотности вероятности
+
 Построим таблицу и график частот для значений из отрезка.
 Для это сгенерируем набор из 10 случайных чисел в диапазоне [0;1].
 
@@ -197,7 +202,7 @@ table(line_sample)
 
 prop.table(table(line_sample))
 ```
-Видимо, что все значения встретились только один раз. Построим график. Можем построить гистограмму для этих значений:
+Видим, что все значения встретились только один раз. Построим график. Можем построить гистограмму для этих значений:
 
 ```{r}
 as_tibble(line_sample) %>% 
@@ -247,6 +252,8 @@ as_tibble(line_sample_10000) %>%
 Что такое распределение? Мы постоянно употребляем это слово.
 
 Говоря о распределениях, мы имеем в виду **закон распределения случайной величины** – соответствие между возможными значениями этой величины из области ее допустимых значений и: вероятностями этих значений -- для дискретной величины, либо плотностью вероятности -- для непрерывной величины.
+
+## Виды распределений
 
 Законы распределений вероятностей можно вывести совсем не для всех величин! Но так сложилось, что некоторые закономерности, распределения вероятностей мы можем описать формулами, как в физике: сила тяжести (сила, с которой Земля притягивает все теля) прямо пропорциональная массе объекта, взятая с коэффициентом ускорения свободного падения $F = m*g$. Мы это заметили относительно окружающего мира и вывели закон (не лично мы, а вообще представители планеты Земля). Точно так же и с распределниями: мы заметили, что вероятности распределения некоторых случайных величин подчиняются определенным законам, и записали их. Например, доказано, что непрерывные случайные величины, на которые действует множество случайных факторов (например, рост, вес и тд), распределяются в соответствии с **распределением Гаусса**, оно же -- **нормальное распределение**. Его формула:
 
@@ -341,5 +348,7 @@ plot(iq, dnorm(iq, mean = 100, sd = 15))
 ```{r}
 plot(iq, pnorm(iq, mean = 100, sd = 15))
 ```
+
+
 
 <!--chapter:end-->
