--- a/03-distributions.Rmd
+++ b/03-distributions.Rmd
@@ -47,7 +47,7 @@ burnout %>%
 
 **Коэффициент ассиметрии, "скошенность" (skewness)** -- показатель симметричности графика: если график симметричен6 этот показатель равен 0, если нет, имеет значение отличное от нуля в ту сторону, в котороую график скошен.
 
-**"Вытянутость" (kurtosis)** -- показатель, насколько график вытянут вверх или "приплюснут" к оси абсцисс.
+**Эксцесс, "вытянутость" (kurtosis)** -- показатель, насколько график вытянут вверх или "приплюснут" вдоль оси абсцисс.
 
 <p align="center"> 
 ```{r}
@@ -132,20 +132,19 @@ mode <- function(x) {
 }
 ```
 
-
 Взвешенное среднее.
 
 Квадратичное среднее.
 
 ### Особенности использования
 
-В примере с оценкой благосостояния мы выяснили, что среднее значение здесь -- плохой варианти для описательной статистики.
+В примере с оценкой благосостояния мы выяснили, что среднее значение здесь -- плохой вариант для описательной статистики.
 
 Мера ЦТ | Шкала          | Какие данные | 
 --------| ---------------| ------------ | 
-Среднее | Количественная | распределение симметрично, нет заметных выборосов |
-Медиана | Количественная или порядковая | распределение не симметрично, есть выбросы |
-Мода | Номинативная (номинальная) | не можем производить метрические операции |
+Среднее | Только количественная | распределение симметрично, нет заметных выборосов |
+Медиана | Количественная или порядковая | можем использовать, когда распределение не симметрично, есть выбросы, не можем использовать для номинативной шкалы |
+Мода | Номинативная (номинальная), порядковая, количественная | чаще всего используется там, где не можем производить метрические операции, но не можем посчитать ее для непрерывных величин |
 
 
 ```{r central_tendency_sampling,include=FALSE}
@@ -188,11 +187,12 @@ ggplot(NULL, aes(asymm_right)) +
   geom_histogram(aes(y = ..density..), alpha =.5, binwidth = .5) +
   geom_density() +
   geom_vline(xintercept = mean(asymm_right), color = colors['Mean']) +
+  geom_vline(xintercept = median(asymm_right), color = colors['Median']) +
+  geom_vline(xintercept = mode(asymm_right)-0.04, color = colors['Mode']) +
   labs(x = 'Value',
        y = 'Density') +
   theme_minimal()
 ```
-
 
 ----
 Мы подошли вплотную к понятиям, которые можно (и мы будем) непосредственно применять на даннных. Чтобы сделать эти понятия близкими к реальности, возьмем реальный датасет (собранные данные), на котором будем дальше работать.
@@ -234,7 +234,7 @@ students %>%
 ```{r}
 table(students$age)
 prop.table(table(students$age))
-round(prop.table(table(students$age, students$Walc), 1), 2)
+# round(prop.table(table(students$age, students$Walc), 1), 2)
 ```
 
 
