updated for chapters

--- a/02-scales_random_variable.Rmd
+++ b/02-scales_random_variable.Rmd
@@ -139,7 +139,7 @@ rolls <- dice(20,1)
 t(rolls)
 ```
 
-## Гистограмма
+## Столбчатая диаграмма
 
 Построим таблицу частот выпадения каждой грани
 
@@ -151,7 +151,7 @@ table(rolls)
 prop.table(table(rolls))
 ```
 
-Можем наглядно посмотреть это на **гистограмме** -- графике, отображающем частоты встречаемости событий.
+Можем наглядно посмотреть это на **столбчатой (столбиковой) диаграмме** -- графике, отображающем частоты встречаемости событий дискретной переменной.
 
 ```{r}
 rolls %>% 
@@ -160,7 +160,7 @@ rolls %>%
   theme_minimal()
 ```
 
-Гистограмма -- это частный случай **столбчатой (или столбиковой) диаграммы**. Она отличается от столбчатой диаграммы тем, что, в отличие от нее, мы сами можем регулировать ширину столбика по оси $x$, задавать, сколько значений переменной х в него войдет, и высотка столбика будут пересчитана в зависимости от этого количества. В столбиковой диаграмме мы так сделать не можем, по оси $x$ всегда только одно значение, каждый столбик соотносится с конкретным значением переменной.
+**Гистограмма** -- это частный случай **столбчатой (или столбиковой) диаграммы**. Она отличается от столбчатой диаграммы тем, что, в отличие от нее, мы сами можем регулировать ширину столбика по оси $x$, задавать, сколько значений переменной х в него войдет, и высотка столбика будут пересчитана в зависимости от этого количества. В столбиковой диаграмме мы так сделать не можем, по оси $x$ всегда только одно значение, каждый столбик соотносится с конкретным значением переменной.
 
 ## Непрерывные СВ и геометрическое определение вероятности
 
@@ -266,11 +266,11 @@ plot(dnorm(1:1000, mean = 500, sd = 100))
 ```{r, echo=F, eval=F}
 # dist_sample <- sample(1:1000, 1000, replace = T)
 
-normdist_sample <- dnorm(1:1000, 500, 100)
-as_tibble(normdist_sample) %>% 
-  ggplot(aes(x=1:1000, y = normdist_sample)) +
-  geom_density() +
-  theme_minimal()
+# normdist_sample <- dnorm(1:1000, 500, 100)
+# as_tibble(normdist_sample) %>% 
+#   ggplot(aes(x=1:1000, y = normdist_sample)) +
+#   geom_density(aes(x=1:1000, y = normdist_sample)) +
+#   theme_minimal()
 ```
 
 Или, например, экспоненциальное распределение:
